--- a/app/src/main/res/layout/user_item.xml
+++ b/app/src/main/res/layout/user_item.xml
@@ -1,6 +1,45 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+                                                   xmlns:app="http://schemas.android.com/apk/res-auto"
+                                                   xmlns:tools="http://schemas.android.com/tools"
                                                    android:layout_width="match_parent"
-                                                   android:layout_height="match_parent">
+                                                   android:layout_height="100dp">
 
+    <ImageView
+            android:layout_width="55dp"
+            android:layout_height="45dp" tools:srcCompat="@tools:sample/avatars"
+            android:id="@+id/imageView" android:layout_marginTop="16dp"
+            app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
+            android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
+            android:layout_marginBottom="8dp" app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintHorizontal_bias="0.023" app:layout_constraintVertical_bias="0.387"/>
+
+    <TextView
+            android:text="@string/fullname"
+            android:layout_width="92dp"
+            android:layout_height="21dp"
+            android:id="@+id/full_name"
+            android:layout_marginTop="8dp"
+            app:layout_constraintTop_toTopOf="parent" android:layout_marginBottom="8dp"
+            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintStart_toEndOf="@+id/imageView"
+            android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
+            app:layout_constraintHorizontal_bias="0.03" app:layout_constraintVertical_bias="0.317"/>
+    <TextView
+            android:text="@string/email"
+            android:layout_width="158dp"
+            android:layout_height="23dp"
+            android:id="@+id/email" app:layout_constraintStart_toEndOf="@+id/full_name"
+            android:layout_marginStart="28dp" android:layout_marginTop="8dp" app:layout_constraintTop_toTopOf="parent"
+            android:layout_marginBottom="8dp" app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintVertical_bias="0.327" android:layout_marginEnd="8dp"
+            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintHorizontal_bias="0.589"/>
+    <TextView
+            android:text="@string/last_login_date"
+            android:layout_width="143dp"
+            android:layout_height="18dp"
+            android:id="@+id/last_login_date" android:layout_marginTop="8dp"
+            app:layout_constraintTop_toBottomOf="@+id/full_name" android:layout_marginBottom="8dp"
+            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintStart_toStartOf="parent"
+            android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
+            app:layout_constraintHorizontal_bias="0.309" app:layout_constraintVertical_bias="0.529"/>
 </androidx.constraintlayout.widget.ConstraintLayout>
