--- a/app/src/main/res/layout/fragment_splash_screen.xml
+++ b/app/src/main/res/layout/fragment_splash_screen.xml
@@ -17,23 +17,23 @@
             tools:context=".views.SplashScreenFragment">
 
         <ImageView
-                android:id="@+id/imageView2"
+                android:id="@+id/progresee_icon"
                 android:layout_width="226dp"
                 android:layout_height="231dp"
                 android:layout_marginStart="8dp"
                 android:layout_marginTop="8dp"
                 android:layout_marginEnd="8dp"
                 android:layout_marginBottom="8dp"
+                android:contentDescription="@string/progresee_icon"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintHorizontal_bias="0.497"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintVertical_bias="0.262"
+                app:layout_constraintVertical_bias="0.25"
                 app:srcCompat="@drawable/ic_progresee_icon" />
 
         <TextView
-                android:id="@+id/textView"
+                android:id="@+id/welcome_text"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="8dp"
@@ -45,7 +45,7 @@
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/imageView2"
-                app:layout_constraintVertical_bias="0.163" />
+                app:layout_constraintTop_toBottomOf="@+id/progresee_icon"
+                app:layout_constraintVertical_bias="0.19999999" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
