--- a/app/src/main/res/layout/list_item_task.xml
+++ b/app/src/main/res/layout/list_item_task.xml
@@ -7,7 +7,7 @@
               android:layout_height="100dp">
 
     <TextView
-            android:text="Task Title"
+            android:text="@string/task_title"
             android:layout_width="match_parent"
             android:layout_height="50dp"
             android:id="@+id/task_title" android:layout_marginTop="16dp"
@@ -16,7 +16,7 @@
             android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
             app:layout_constraintHorizontal_bias="0.023" app:layout_constraintVertical_bias="0.0"/>
     <TextView
-            android:text="Due by"
+            android:text="@string/due_by"
             android:layout_gravity="end"
             android:layout_margin="8dp"
             android:layout_width="wrap_content"
