--- a/app/src/main/res/layout/list_item_user.xml
+++ b/app/src/main/res/layout/list_item_user.xml
@@ -12,7 +12,8 @@
             app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
             android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
             android:layout_marginBottom="8dp" app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintHorizontal_bias="0.023" app:layout_constraintVertical_bias="0.387"/>
+            app:layout_constraintHorizontal_bias="0.023" app:layout_constraintVertical_bias="0.387"
+            android:contentDescription="@string/user_profile" />
 
     <TextView
             android:text="@string/full_name"
