--- a/app/src/main/res/layout/nav_header.xml
+++ b/app/src/main/res/layout/nav_header.xml
@@ -22,5 +22,6 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            app:srcCompat="@drawable/ic_progresee_icon"/>
+            app:srcCompat="@drawable/ic_progresee_icon"
+            android:contentDescription="@string/progresee_icon" />
 </androidx.constraintlayout.widget.ConstraintLayout>
