--- a/app/src/main/res/navigation/navigation.xml
+++ b/app/src/main/res/navigation/navigation.xml
@@ -13,7 +13,18 @@
     <fragment android:id="@+id/settingFragment" android:name="com.example.progresee.views.SettingFragment"
               android:label="fragment_setting" tools:layout="@layout/fragment_setting"/>
     <fragment android:id="@+id/classroomFragment" android:name="com.example.progresee.views.ClassroomFragment"
-              android:label="fragment_classroom" tools:layout="@layout/fragment_classroom"/>
+              android:label="fragment_classroom" tools:layout="@layout/fragment_classroom">
+        <action
+                android:id="@+id/action_classroomFragment_to_createClassroomFragment"
+                app:destination="@id/createClassroomFragment" />
+        <action
+                android:id="@+id/action_classroomFragment_to_taskFragment"
+                app:destination="@id/taskFragment"
+                app:enterAnim="@anim/slide_in_left"
+                app:exitAnim="@anim/slide_out_left"
+                app:popEnterAnim="@anim/slide_in_left"
+                app:popExitAnim="@anim/slide_out_right" />
+    </fragment>
     <fragment
             android:id="@+id/splashScreenFragment"
             android:name="com.example.progresee.views.SplashScreenFragment"
@@ -28,4 +39,13 @@
                 app:popUpTo="@+id/navigation"
                 app:popUpToInclusive="true" />
     </fragment>
+    <fragment
+            android:id="@+id/createClassroomFragment"
+            android:name="com.example.progresee.views.CreateClassroomFragment"
+            android:label="CreateClassroomFragment" />
+    <fragment
+            android:id="@+id/taskFragment"
+            android:name="com.example.progresee.views.TaskFragment"
+            android:label="fragment_task"
+            tools:layout="@layout/fragment_task" />
 </navigation>
