--- a/app/src/main/res/layout/fragment_create_classroom.xml
+++ b/app/src/main/res/layout/fragment_create_classroom.xml
@@ -1,23 +1,70 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:app="http://schemas.android.com/apk/res-auto"
-        xmlns:tools="http://schemas.android.com/tools">
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools">
+
     <data>
+
         <variable
-                name="classroom"
-                type="com.example.progresee.beans.Classroom" />
-        
+            name="classroom"
+            type="com.example.progresee.beans.Classroom" />
+
         <variable
-                name="createClassroomViewModel"
-                type="com.example.progresee.viewmodels.CreateClassroomViewModel" />
+            name="createClassroomViewModel"
+            type="com.example.progresee.viewmodels.CreateClassroomViewModel" />
     </data>
 
-    <androidx.constraintlayout.widget.ConstraintLayout 
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            tools:context=".views.CreateClassroomFragment">
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        tools:context=".views.CreateClassroomFragment">
 
+        <TextView
+            android:id="@+id/createClassroomTitle"
+            android:layout_width="276dp"
+            android:layout_height="37dp"
+            android:text="@string/create_a_classroom_title"
+            android:textColor="@android:color/black"
+            android:textSize="20dp"
+            android:textStyle="bold"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.444"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintVertical_bias="0.067" />
 
+        <EditText
+            android:id="@+id/editText_classroom_name"
+            android:layout_width="219dp"
+            android:layout_height="47dp"
+            android:ems="10"
+            android:hint="@string/classroom_name"
+            android:inputType="textPersonName"
+            android:singleLine="true"
+            android:textSize="16dp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.313"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/createClassroomTitle"
+            app:layout_constraintVertical_bias="0.036" />
+
+        <EditText
+            android:id="@+id/editText_classroom_description"
+            android:layout_width="219dp"
+            android:layout_height="47dp"
+            android:ems="10"
+            android:hint="@string/classroom_description"
+            android:inputType="textPersonName"
+            android:singleLine="true"
+            android:textSize="16dp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.312"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/editText_classroom_name"
+            app:layout_constraintVertical_bias="0.031" />
 
 
     </androidx.constraintlayout.widget.ConstraintLayout>
