no header on adapter bit of navigationz

--- a/app/src/main/res/navigation/navigation.xml
+++ b/app/src/main/res/navigation/navigation.xml
@@ -47,5 +47,9 @@
             android:id="@+id/taskFragment"
             android:name="com.example.progresee.views.TaskFragment"
             android:label="fragment_task"
-            tools:layout="@layout/fragment_task" />
+        tools:layout="@layout/fragment_task">
+        <argument
+            android:name="classroomId"
+            app:argType="long" />
+    </fragment>
 </navigation>
