--- a/app/src/main/res/layout/list_item_task.xml
+++ b/app/src/main/res/layout/list_item_task.xml
@@ -1,25 +1,52 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-              xmlns:app="http://schemas.android.com/apk/res-auto"
-              xmlns:tools="http://schemas.android.com/tools"
-              android:layout_width="match_parent"
-              android:orientation="vertical"
-              android:layout_height="100dp">
+<layout>
 
-    <TextView
-            android:text="@string/task_title"
+    <data>
+
+        <variable
+            name="task"
+            type="com.example.progresee.beans.Task" />
+
+        <variable
+            name="taskClickListener"
+            type="com.example.progresee.adapters.TaskClickListener" />
+    </data>
+
+    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:app="http://schemas.android.com/apk/res-auto"
+        xmlns:tools="http://schemas.android.com/tools"
+        android:layout_width="match_parent"
+        android:layout_height="100dp"
+        android:onClick="@{() -> taskClickListener.onClick(task)}"
+
+        android:orientation="vertical">
+
+        <TextView
+            android:id="@+id/task_title"
             android:layout_width="match_parent"
             android:layout_height="50dp"
-            android:id="@+id/task_title" android:layout_marginTop="16dp"
-            app:layout_constraintTop_toTopOf="parent" app:layout_constraintBottom_toBottomOf="parent"
+            android:layout_marginStart="8dp"
+            android:layout_marginTop="16dp"
+            android:layout_marginEnd="8dp"
+            android:text="@string/task_title"
+            app:taskTitle="@{task}"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.023"
             app:layout_constraintStart_toStartOf="parent"
-            android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
-            app:layout_constraintHorizontal_bias="0.023" app:layout_constraintVertical_bias="0.0"/>
-    <TextView
-            android:text="@string/due_by"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintVertical_bias="0.0" />
+
+        <TextView
+            android:id="@+id/due_by"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             android:layout_gravity="end"
             android:layout_margin="8dp"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content" tools:layout_editor_absoluteY="65dp"
-            tools:layout_editor_absoluteX="248dp" android:id="@+id/due_by"/>
-</LinearLayout>
+            android:text="@string/due_by"
+            app:taskDueDate="@{task}"
+            tools:layout_editor_absoluteX="248dp"
+            tools:layout_editor_absoluteY="65dp" />
+    </LinearLayout>
+
+</layout>
