--- a/app/src/main/res/layout/fragment_classroom.xml
+++ b/app/src/main/res/layout/fragment_classroom.xml
@@ -31,15 +31,14 @@
             android:id="@+id/createClassroom_button"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginBottom="60dp"
             android:clickable="true"
             android:focusable="true"
-            android:src="@android:drawable/ic_menu_add"
+            android:src="@drawable/fab"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.833"
+            app:layout_constraintHorizontal_bias="0.923"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_bias="0.944" />
+            app:layout_constraintVertical_bias="0.945" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
