--- a/app/src/main/res/layout/list_item_exercise.xml
+++ b/app/src/main/res/layout/list_item_exercise.xml
@@ -1,18 +1,36 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-              xmlns:app="http://schemas.android.com/apk/res-auto" android:orientation="horizontal"
-              android:layout_width="match_parent"
-              android:layout_height="100dp">
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
+    <data>
+
+        <variable
+            name="exercise"
+            type="com.example.progresee.beans.Exercise" />
+
+        <variable
+            name="exerciseClickListener"
+            type="com.example.progresee.adapters.ExerciseClickListener" />
+    </data>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="100dp"
+        android:orientation="horizontal">
     <TextView
-            android:text="@string/exercise_text"
-            android:layout_width="320dp"
-            android:layout_height="match_parent"
-            android:id="@+id/exercise_text"/>
-    <ImageView
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            app:srcCompat="@android:drawable/checkbox_off_background"
+        android:id="@+id/exercise_text"
+        android:layout_width="wrap_content"
+        android:layout_height="match_parent"
+        android:layout_weight="4"
+        android:text="@string/exercise_text" />
+
+        <ImageView
             android:id="@+id/exercise_status"
-            android:contentDescription="@string/exercise_status"/>
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_gravity="end"
+            android:layout_weight="1"
+            android:contentDescription="@string/exercise_status"
+            app:srcCompat="@android:drawable/checkbox_off_background" />
 </LinearLayout>
+</layout>
