--- a/app/src/main/res/navigation/navigation.xml
+++ b/app/src/main/res/navigation/navigation.xml
@@ -1,23 +1,36 @@
 <?xml version="1.0" encoding="utf-8"?>
 <navigation xmlns:android="http://schemas.android.com/apk/res/android"
-            xmlns:app="http://schemas.android.com/apk/res-auto"
-            xmlns:tools="http://schemas.android.com/tools" android:id="@+id/navigation"
-        app:startDestination="@id/splashScreenFragment">
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/navigation"
+    app:startDestination="@id/splashScreenFragment">
 
-    <fragment android:id="@+id/loginFragment" android:name="com.example.progresee.views.LoginFragment"
-              android:label="fragment_login" tools:layout="@layout/fragment_login">
+    <fragment
+        android:id="@+id/loginFragment"
+        android:name="com.example.progresee.views.LoginFragment"
+        android:label="fragment_login"
+        tools:layout="@layout/fragment_login">
         <action
             android:id="@+id/action_loginFragment_to_classroomFragment"
             app:destination="@id/classroomFragment"
             app:enterAnim="@anim/slide_in_left"
             app:popEnterAnim="@anim/slide_in_right" />
     </fragment>
-    <fragment android:id="@+id/helpFragment" android:name="com.example.progresee.views.HelpFragment"
-              android:label="fragment_help" tools:layout="@layout/fragment_help"/>
-    <fragment android:id="@+id/settingFragment" android:name="com.example.progresee.views.SettingFragment"
-              android:label="fragment_setting" tools:layout="@layout/fragment_setting"/>
-    <fragment android:id="@+id/classroomFragment" android:name="com.example.progresee.views.ClassroomFragment"
-              android:label="fragment_classroom" tools:layout="@layout/fragment_classroom">
+    <fragment
+        android:id="@+id/helpFragment"
+        android:name="com.example.progresee.views.HelpFragment"
+        android:label="fragment_help"
+        tools:layout="@layout/fragment_help" />
+    <fragment
+        android:id="@+id/settingFragment"
+        android:name="com.example.progresee.views.SettingFragment"
+        android:label="fragment_setting"
+        tools:layout="@layout/fragment_setting" />
+    <fragment
+        android:id="@+id/classroomFragment"
+        android:name="com.example.progresee.views.ClassroomFragment"
+        android:label="fragment_classroom"
+        tools:layout="@layout/fragment_classroom">
         <action
             android:id="@+id/action_classroomFragment_to_createClassroomFragment"
             app:destination="@id/createClassroomFragment"
@@ -30,30 +43,41 @@
             app:popEnterAnim="@anim/slide_in_right" />
     </fragment>
     <fragment
-            android:id="@+id/splashScreenFragment"
-            android:name="com.example.progresee.views.SplashScreenFragment"
-            android:label="SplashScreenFragment" >
+        android:id="@+id/splashScreenFragment"
+        android:name="com.example.progresee.views.SplashScreenFragment"
+        android:label="SplashScreenFragment">
         <action
-                android:id="@+id/action_splashScreenFragment_to_loginFragment"
-                app:destination="@id/loginFragment"
-                app:enterAnim="@anim/slide_in_left"
-                app:exitAnim="@anim/slide_out_left"
-                app:popEnterAnim="@anim/slide_in_right"
-                app:popExitAnim="@anim/slide_out_right"
-                app:popUpTo="@+id/navigation"
-                app:popUpToInclusive="true" />
+            android:id="@+id/action_splashScreenFragment_to_loginFragment"
+            app:destination="@id/loginFragment"
+            app:enterAnim="@anim/slide_in_left"
+            app:exitAnim="@anim/slide_out_left"
+            app:popEnterAnim="@anim/slide_in_right"
+            app:popExitAnim="@anim/slide_out_right"
+            app:popUpTo="@+id/navigation"
+            app:popUpToInclusive="true" />
     </fragment>
     <fragment
-            android:id="@+id/createClassroomFragment"
-            android:name="com.example.progresee.views.CreateClassroomFragment"
-            android:label="CreateClassroomFragment" />
+        android:id="@+id/createClassroomFragment"
+        android:name="com.example.progresee.views.CreateClassroomFragment"
+        android:label="CreateClassroomFragment" />
     <fragment
-            android:id="@+id/taskFragment"
-            android:name="com.example.progresee.views.TaskFragment"
-            android:label="fragment_task"
+        android:id="@+id/taskFragment"
+        android:name="com.example.progresee.views.TaskFragment"
+        android:label="fragment_task"
         tools:layout="@layout/fragment_task">
         <argument
             android:name="classroomId"
+            app:argType="long" />
+        <action
+            android:id="@+id/action_taskFragment_to_taskDetailsFragment"
+            app:destination="@id/taskDetailsFragment" />
+    </fragment>
+    <fragment
+        android:id="@+id/taskDetailsFragment"
+        android:name="com.example.progresee.views.TaskDetailsFragment"
+        android:label="ExerciseFragment" >
+        <argument
+            android:name="taskId"
             app:argType="long" />
     </fragment>
 </navigation>
