--- a/app/src/main/res/layout/fragment_classroom.xml
+++ b/app/src/main/res/layout/fragment_classroom.xml
@@ -34,6 +34,7 @@
             android:clickable="true"
             android:focusable="true"
             android:src="@drawable/fab"
+            android:onClick="@{()->classroomViewModel.navigateToCreateClassroomFragment()}"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.923"
